Modificaciones Metodos de pago

--- a/payments.html
+++ b/payments.html
@@ -267,7 +267,7 @@ $(document).ready(function () {
 <body>
 
 
-<div class="container-fluid main-container">
+<div class="container-fluid main-container" id="MetodosPago">
 
 
 
@@ -334,8 +334,6 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="img/portada.jpeg" width="100%" /></p>
-<p><br></p>
 <p>Las dinámicas transaccionales de los colombianos reflejan sus hábitos, intereses y motivaciones para hacer uso de sus productos financieros y nos permiten comprender mejor qué podemos ofrecerles en términos de productos y servicios. Aquí algunos hallazgos clave:</p>
 <p><br></p>
 <ul>
