--- a/colombia.html
+++ b/colombia.html
@@ -255,7 +255,7 @@ $(document).ready(function () {
 <body>
 
 
-<div class="container-fluid main-container">
+<div class="container-fluid main-container" id="colombia">
 
 
 
