--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ $(document).ready(function () {
 <body>
 
 
-<div class="container-fluid main-container">
+<div class="container-fluid main-container" id="inicio">
 
 
 
@@ -322,7 +322,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="img/portada.jpeg" width="100%" /></p>
+<p><img src="img/portada.jpeg" width="" /></p>
 <p><br> <br></p>
 <div id="por-qué-importan-las-transacciones" class="section level2">
 <h2>¿Por qué importan las transacciones?</h2>
