--- a/colombia.html
+++ b/colombia.html
@@ -337,7 +337,7 @@ $( document ).ready(function()
 </div>
 <div class="row">
 <div class="col-md-5">
-<p><img src="img/colombia-mapaColombia.png" width="100%" /></p>
+<p><img src="img/colombia-mapaColombia.png" width="266" /></p>
 </div>
 <div class="col-md-7">
 <div class="ocultarEnMovil">
@@ -361,7 +361,7 @@ $( document ).ready(function()
 <p><br> <br></p>
 <div class="row fondoGrisMovil">
 <div class="col-md-1 col-xs-3">
-<p><img src="img/iconos/1-cuantas.png" width="100%" /></p>
+<p><img src="img/iconos/1-cuantas.png" width="60" /></p>
 </div>
 <div class="col-md-5 col-xs-9">
 <h3 id="cuántas-personas-viven-en-el-país">¿Cuántas personas viven en el país?</h3>
@@ -374,7 +374,7 @@ $( document ).ready(function()
 <p><br></p>
 </div>
 <div class="col-md-1">
-<p><img src="img/iconos/2-grande.png" width="100%" /></p>
+<p><img src="img/iconos/2-grande.png" width="61" /></p>
 </div>
 <div class="col-md-5">
 <h3 id="qué-tan-grande-es-el-territorio">¿Qué tan grande es el territorio?</h3>
@@ -396,7 +396,7 @@ $( document ).ready(function()
 <p>A esto se suma que en los municipios rurales, el indicador de inclusión financiera fue de 55.4%, en claro contraste con el 88.7% de las ciudades.</p>
 </div>
 <div class="col-md-4">
-<img src="img/iconos/3-variosA.png" width="100%" /> <br><br><br>
+<img src="img/iconos/3-variosA.png" width="202" /> <br><br><br>
 </div>
 </div>
 <div class="row">
@@ -416,7 +416,7 @@ $( document ).ready(function()
 <p><br></p>
 </div>
 <div class="col-md-1 col-xs-3">
-<p><img src="img/iconos/5-volumen.png" width="100%" /></p>
+<p><img src="img/iconos/5-volumen.png" width="62" /></p>
 </div>
 <div class="col-md-5 col-xs-9">
 <h2 id="volumen-económico">Volumen económico</h2>
