--- a/regions.html
+++ b/regions.html
@@ -353,8 +353,8 @@ $( document ).ready(function()
 <div id="titulo" class="departamentos">
 
 </div>
-<div id="section" class="section level1 tabset">
-<h1></h1>
+<div id="contenido" class="section level1 tabset">
+<h1>Contenido</h1>
 <div id="overview" class="section level2">
 <h2>Overview</h2>
 <div class="row">
