--- a/index.html
+++ b/index.html
@@ -330,7 +330,8 @@ $( document ).ready(function()
 </div>
 
 
-<p>Descubre las oportunidades del mercado colombiano en términos de pagos digitales, visualiza su potencial y toma las mejores decisiones de negocio.</p>
+<p id="slogan">Descubre las oportunidades del mercado colombiano en términos de pagos digitales, visualiza su potencial y toma las mejores decisiones de negocio.</p>
+<img id="cuadroIndicadores" src="img/Cuadro-geografia.png" alt="Cuadro indicadores">
 <div id = "titulo" class = "inicio">
 
 
